# AutoDifferationDSL

./: .README.md.swp  CMakeLists.txt  README.md  main.cpp  patch.gan  test.gan
DSL/: Interpretor.cpp  Interpretor.h  dsl_utils.cpp  dsl_utils.h
DSL/FrontEnd/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
DSL/InterpretorImplements/: InterpretorImplements.cpp  InterpretorImplements.h  PrimitiveProcedure.cpp  PrimitiveProcedure.h
